# ShaderTest

./: .clang-format  .gitignore  CMakeLists.txt  make.bat  panda3d-prc-file.prc
shaders/fragment/: base-combine.frag  base.frag  basic.frag  bloom.frag  box-blur.frag  chromatic-aberration.frag  depth-of-field.frag  dilation.frag  discard.frag  film-grain.frag  foam-mask.frag  foam.frag  fog.frag  gamma-correction.frag  geometry-buffer-0.frag  geometry-buffer-1.frag  geometry-buffer-2.frag  kuwahara-filter.frag  lookup-table.frag  material-diffuse.frag  material-specular.frag  median-filter.frag  motion-blur.frag  normal.frag  outline.frag  phong.frag  pixelize.frag  position.frag  posterize.frag  reflection-color.frag  reflection.frag  refraction.frag  scene-combine.frag  screen-space-reflection.frag  screen-space-refraction.frag  sharpen.frag  solid-color.frag  ssao.frag
shaders/vertex/: base.vert  basic.vert  discard.vert  phong.vert  solid-color.vert
src/: camera.cpp  camera.h  demo.cpp  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  prec.h  sample.cpp  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h
